# oneContainer-Cloud-Tool

./: .gitignore  Authors.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/onecontainer_cloud_tool/: .config.py.swp  __init__.py  abstract_cloud.py  aws.py  cli.py  cloud_services.py  config.py  list_instances.py  logger.py  services.py  utils.py
src/onecontainer_cloud_tool/cloud/: abstract_cloud.py  aws.py  gcp.py  m_azure.py
src/onecontainer_cloud_tool/data/: azure-cloudinit  instance_listing.json
tests/: test_aws.py  test_azure.py  test_no_config.py  test_onecontainer_cloud_tool.py  test_version.py
wiki/: ecr_containers.md
wiki/dev/: readme.md
